# domino

./: .gitignore  CITATION.cff  GITHUB_UPLOAD.md  LICENSE  README.md  pyproject.toml  validate_core.py
Domino/: CONTRIBUTING.md  README.md
Domino/benchmarks/: plot_optimization_summary.py
Domino/docs/: SCALING_AND_RESOURCES.md  VALIDATION.md
Domino/domino/: SECURITY.md  classify.py  io.py  pipeline.py  testutils.py
Domino/domino/docs/: COVARIATES.md  INPUT_OUTPUT.md  OPTIMIZATION_BENCHMARK.md
Domino/domino/domino/: _utils.py  vc.py
Domino/tests/: test_optimization.py
benchmarks/: benchmark_current.py
benchmarks/results/: optimization_benchmark_summary.csv
docs/: VALIDATION_REPORT.md
domino/: CODE_OF_CONDUCT.md  __init__.py  cli.py  environment.yml  release_check.py  resources.py
domino/benchmarks/: README.md
domino/docs/: CLI_REFERENCE.md  METHODS.md
domino/domino/: assoc.py  backend.py  blup.py  grm.py  output.py
domino/examples/: quickstart.py
domino/tests/: test_core.py
