[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Domino"
version = "1.0.0"
description = "Domino: a scalable, dominance-aware GWAS pipeline for quantitative traits"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "unculturedbacterium" }]
keywords = [
    "GWAS",
    "dominance",
    "genetics",
    "quantitative-genetics",
    "mixed-model",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "pyarrow>=8.0",
    "threadpoolctl>=3.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
test = ["pytest>=7.0", "ruff>=0.6", "build>=1.2"]
cuda = ["cupy-cuda12x>=12.0"]

[project.urls]
Homepage = "https://github.com/unculturedbacterium/Domino"
Repository = "https://github.com/unculturedbacterium/Domino"
Issues = "https://github.com/unculturedbacterium/Domino/issues"
Documentation = "https://github.com/unculturedbacterium/Domino#readme"

[project.scripts]
domino = "domino.cli:main"

[tool.setuptools.packages.find]
include = ["domino*"]

[tool.ruff]
line-length = 100
target-version = "py39"
